--- a/index.html
+++ b/index.html
@@ -48,5 +48,94 @@
         </p>
       </div>
     </header>
+    <main>
+      <h1 id="projects">Projects</h1>
+
+      <ul>
+        <li>
+          <h3>Clone website</h3>
+          <div id="pro0">
+            <img
+              src="src/images/CloneWebsite.png"
+              alt="A clone website, with hero image"
+            />
+          </div>
+          <div class="proText">
+            <p></p>
+            <a
+              href="https://github.com/Rasweb/HTML-CSS-Uppgift2.git"
+              target="_blank"
+              >Vill du veta mer?</a
+            >
+          </div>
+        </li>
+        <li>
+          <h3>To-Do List</h3>
+          <div id="pro1">
+            <img
+              src="src/images/ToDo.png"
+              alt="A to-do list with localstorage."
+            />
+          </div>
+          <div class="proText">
+            <p></p>
+            <a
+              href="https://github.com/Rasweb/JavaScript-BasicCourse-Assignment1.git"
+              target="_blank"
+              >Vill du veta mer?</a
+            >
+          </div>
+        </li>
+        <li>
+          <h3>JavaScript group assignment</h3>
+          <div id="pro2">
+            <img
+              src="src/images/HomeGrownRecords.png"
+              alt="A fictional music shop using objects."
+            />
+          </div>
+          <div class="proText">
+            <p></p>
+            <a
+              href="https://github.com/ViggoOhlsson/Project_Butik.git"
+              target="_blank"
+              >Vill du veta mer?</a
+            >
+          </div>
+        </li>
+        <li>
+          <h3>HTML & CSS group assignment</h3>
+          <div id="pro3">
+            <img
+              src="src/images/ettLitetHem.png"
+              alt="A website created using Bootstrap."
+            />
+          </div>
+          <div class="proText">
+            <p></p>
+            <a
+              href="https://github.com/FannyRosen/ettlitethem.git"
+              target="_blank"
+              >Vill du veta mer?</a
+            >
+          </div>
+        </li>
+        <li>
+          <h3>NodeJs To-do list</h3>
+          <div id="pro4">
+            <img
+              src="src/images/NodeJsTodo.png"
+              alt="A Node express to-do list with CRUD"
+            />
+          </div>
+          <div class="proText">
+            <p></p>
+            <a href="https://github.com/Rasweb/Nodejs-TODO.git" target="_blank"
+              >Vill du veta mer?</a
+            >
+          </div>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
