--- a/index.html
+++ b/index.html
@@ -137,5 +137,23 @@
         </li>
       </ul>
     </main>
+    <footer class="tes" id="contact">
+      <div>
+        <h1 id="contactText">Contact me</h1>
+        <p>You can find me on these websites:</p>
+      </div>
+      <div class="iconsCont">
+        <a href="https://github.com/Rasweb" target="blank_" class="btn"
+          ><i class="fab fa-github">GitHub</i></a
+        >
+        <a
+          href="https://www.linkedin.com/in/rasmus-palm-076a83219/"
+          target="blank_"
+          class="btn"
+          ><i class="fab fa-linkedin"></i>Linkedin</a
+        >
+      </div>
+      <a href="#home"><i class="fas fa-arrow-up"></i></a>
+    </footer>
   </body>
 </html>
