--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </label>
         </div>
         <div class="navLinks">
-          <a href="#home">Home</a>
+          <a href="#home" name="home">Home</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
         </div>
