Added a contact way

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
           class="btn"
           ><i class="fab fa-linkedin"></i>Linkedin</a
         >
+        <a href="mailto:rasmus@rasweb.one?subject=Message From Rasweb Website"
+          >Contact Me</a
+        >
       </div>
       <a href="#home"><i class="fas fa-arrow-up"></i></a>
     </footer>
