added email icon and fixed "_blank"

--- a/index.html
+++ b/index.html
@@ -148,14 +148,18 @@
         >
         <a
           href="https://www.linkedin.com/in/rasmus-palm-076a83219/"
-          target="blank_"
+          target="_blank"
           class="btn"
           ><i class="fab fa-linkedin"></i>Linkedin</a
         >
-        <a href="mailto:rasmus@rasweb.one?subject=Message From Rasweb Website"
-          >Contact Me</a
+        <a
+          href="mailto:rasmus@rasweb.one?subject=Message From Rasweb Website"
+          target="_blank"
+          class="btn"
+          ><i class="fas fa-envelope"></i>Email me</a
         >
       </div>
+
       <a href="#home"><i class="fas fa-arrow-up"></i></a>
     </footer>
   </body>
