--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
             />
           </div>
           <div class="proText">
-            <p></p>
+            <p>
+              This is a clone site, it was developed with Gulp, Sass, and HTML.
+              It is also my very first HTML & CSS project.
+            </p>
             <a
               href="https://github.com/Rasweb/HTML-CSS-Uppgift2.git"
               target="_blank"
@@ -77,7 +80,10 @@
             />
           </div>
           <div class="proText">
-            <p></p>
+            <p>
+              This is a javaScript to-do list with localStorage. It's also the
+              first javaScript project I've ever done.
+            </p>
             <a
               href="https://github.com/Rasweb/JavaScript-BasicCourse-Assignment1.git"
               target="_blank"
@@ -94,7 +100,11 @@
             />
           </div>
           <div class="proText">
-            <p></p>
+            <p>
+              This is a group assignment with two other students, I created the
+              forms and their properties and also the testing for the site using
+              cypress.
+            </p>
             <a
               href="https://github.com/ViggoOhlsson/Project_Butik.git"
               target="_blank"
@@ -111,7 +121,11 @@
             />
           </div>
           <div class="proText">
-            <p></p>
+            <p>
+              This is a group assignment with 2 other people, it was created
+              with the help of Bootstrap, Sass and Gulp. I created the
+              Contact(Kontakt) page and the about(Om) page.
+            </p>
             <a
               href="https://github.com/FannyRosen/ettlitethem.git"
               target="_blank"
@@ -128,7 +142,10 @@
             />
           </div>
           <div class="proText">
-            <p></p>
+            <p>
+              This is a to-do list created using NodeJs and with Express and
+              express handlebars.
+            </p>
             <a href="https://github.com/Rasweb/Nodejs-TODO.git" target="_blank"
               >Vill du veta mer?</a
             >
