fixed a language problem

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a
               href="https://github.com/Rasweb/HTML-CSS-Uppgift2.git"
               target="_blank"
-              >Vill du veta mer?</a
+              >Do you want to know more?</a
             >
           </div>
         </li>
@@ -82,7 +82,7 @@
             <a
               href="https://github.com/Rasweb/JavaScript-BasicCourse-Assignment1.git"
               target="_blank"
-              >Vill du veta mer?</a
+              >Do you want to know more?</a
             >
           </div>
         </li>
@@ -99,7 +99,7 @@
             <a
               href="https://github.com/ViggoOhlsson/Project_Butik.git"
               target="_blank"
-              >Vill du veta mer?</a
+              >Do you want to know more?</a
             >
           </div>
         </li>
@@ -116,7 +116,7 @@
             <a
               href="https://github.com/FannyRosen/ettlitethem.git"
               target="_blank"
-              >Vill du veta mer?</a
+              >Do you want to know more?</a
             >
           </div>
         </li>
@@ -131,7 +131,7 @@
           <div class="proText">
             <p></p>
             <a href="https://github.com/Rasweb/Nodejs-TODO.git" target="_blank"
-              >Vill du veta mer?</a
+              >Do you want to know more?</a
             >
           </div>
         </li>
