Fixed some text

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           href="mailto:rasmus@rasweb.one?subject=Message From Rasweb Website"
           target="_blank"
           class="btn"
-          ><i class="fas fa-envelope"></i>Email me</a
+          ><i class="fas fa-envelope"></i>Email Me</a
         >
       </div>
 
