--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/css/style.css" />
+    <script src="src/js/script.js"></script>
     <script
       src="https://kit.fontawesome.com/86e4a57ae8.js"
       crossorigin="anonymous"
@@ -153,6 +154,19 @@
         </li>
       </ul>
     </main>
+
+    <div id="home">
+      <h2>Dark/Light Mode</h2>
+      <p>Press the button below</p>
+      <button id="toggleDarkLight">Toggle dark/light mode</button>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
+        libero nihil tenetur quisquam eos architecto, vero ex officia vitae eum!
+        Voluptatum mollitia esse earum exercitationem voluptatem alias quam
+        maiores quos.
+      </p>
+    </div>
+
     <footer class="tes" id="contact">
       <div>
         <h1 id="contactText">Contact me</h1>
