--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/css/style.css" />
-    <script src="src/js/script.js"></script>
+    <script src="src/js/script.js" type="text/javascript"></script>
     <script
       src="https://kit.fontawesome.com/86e4a57ae8.js"
       crossorigin="anonymous"
