--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/css/style.css" />
-    <script src="/frontend/src/js/script.js" type="text/javascript"></script>
+    <script src="/src/js/script.js" type="text/javascript"></script>
     <script
       src="https://kit.fontawesome.com/86e4a57ae8.js"
       crossorigin="anonymous"
@@ -155,7 +155,7 @@
       </ul>
     </main>
 
-    <div id="home">
+    <section id="home">
       <h2>Dark/Light Mode</h2>
       <p>Press the button below</p>
       <button id="toggleDarkLight">Toggle dark/light mode</button>
@@ -165,7 +165,7 @@
         Voluptatum mollitia esse earum exercitationem voluptatem alias quam
         maiores quos.
       </p>
-    </div>
+    </section>
 
     <footer class="tes" id="contact">
       <div>
