--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/css/style.css" />
-    <script src="/src/js/script.js" type="text/javascript"></script>
+    <script type="module" src="/src/js/script.js"></script>
+    <link rel="stylesheet" href="/src/css/style.css" />
     <script
       src="https://kit.fontawesome.com/86e4a57ae8.js"
       crossorigin="anonymous"
@@ -51,7 +51,7 @@
     </header>
     <main>
       <h1 id="projects">Projects</h1>
-      <ul>
+      <!-- <ul>
         <li>
           <h3>Clone website</h3>
           <div id="pro0">
@@ -152,7 +152,7 @@
             >
           </div>
         </li>
-      </ul>
+      </ul> -->
     </main>
 
     <section id="home">
