--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </p>
       </div>
     </header>
-    <main>
+    <main id="main">
       <h1 id="projects">Projects</h1>
       <!-- <ul>
         <li>
