--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
     <main id="main">
       <h1 id="projects">Projects</h1>
-      <!-- <ul>
+      <ul>
         <li>
           <h3>Clone website</h3>
           <div id="pro0">
@@ -152,20 +152,20 @@
             >
           </div>
         </li>
-      </ul> -->
-    </main>
+      </ul>
 
-    <section id="home">
-      <h2>Dark/Light Mode</h2>
-      <p>Press the button below</p>
-      <button id="toggleDarkLight">Toggle dark/light mode</button>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
-        libero nihil tenetur quisquam eos architecto, vero ex officia vitae eum!
-        Voluptatum mollitia esse earum exercitationem voluptatem alias quam
-        maiores quos.
-      </p>
-    </section>
+      <section id="home">
+        <h2>Dark/Light Mode</h2>
+        <p>Press the button below</p>
+        <button id="toggleDarkLight">Toggle dark/light mode</button>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Exercitationem libero nihil tenetur quisquam eos architecto, vero ex
+          officia vitae eum! Voluptatum mollitia esse earum exercitationem
+          voluptatem alias quam maiores quos.
+        </p>
+      </section>
+    </main>
 
     <footer class="tes" id="contact">
       <div>
