Moved the dark/light button.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           Below, you can find some of my projects there are more on my GitHub,
           but keep in mind that I'm fairly new as a developer, so there are more
           projects to come.
+          <button id="toggleDarkLight">Dark/Light Mode</button>
         </p>
       </div>
     </header>
