--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="/src/js/script.js"></script>
+    <script src="src/js/script.js" type="module"></script>
     <link rel="stylesheet" href="/src/css/style.css" />
     <script
       src="https://kit.fontawesome.com/86e4a57ae8.js"
@@ -50,111 +50,7 @@
         </p>
       </div>
     </header>
-    <main id="main">
-      <h1 id="projects">Projects</h1>
-      <ul>
-        <li>
-          <h3>Clone website</h3>
-          <div id="pro0">
-            <img
-              src="src/images/CloneWebsite.png"
-              alt="A clone website, with hero image"
-            />
-          </div>
-          <div class="proText">
-            <p>
-              This is a clone site, it was developed with Gulp, Sass, and HTML.
-              It is also my very first HTML & CSS project.
-            </p>
-            <a
-              href="https://github.com/Rasweb/HTML-CSS-Uppgift2.git"
-              target="_blank"
-              >Do you want to know more?</a
-            >
-          </div>
-        </li>
-        <li>
-          <h3>To-Do List</h3>
-          <div id="pro1">
-            <img
-              src="src/images/ToDo.png"
-              alt="A to-do list with localstorage."
-            />
-          </div>
-          <div class="proText">
-            <p>
-              This is a javaScript to-do list with localStorage. It's also the
-              first javaScript project I've ever done.
-            </p>
-            <a
-              href="https://github.com/Rasweb/JavaScript-BasicCourse-Assignment1.git"
-              target="_blank"
-              >Do you want to know more?</a
-            >
-          </div>
-        </li>
-        <li>
-          <h3>JavaScript group assignment</h3>
-          <div id="pro2">
-            <img
-              src="src/images/HomeGrownRecords.png"
-              alt="A fictional music shop using objects."
-            />
-          </div>
-          <div class="proText">
-            <p>
-              This is a group assignment with two other students, I created the
-              forms and their properties and also the testing for the site using
-              cypress.
-            </p>
-            <a
-              href="https://github.com/ViggoOhlsson/Project_Butik.git"
-              target="_blank"
-              >Do you want to know more?</a
-            >
-          </div>
-        </li>
-        <li>
-          <h3>HTML & CSS group assignment</h3>
-          <div id="pro3">
-            <img
-              src="src/images/ettLitetHem.png"
-              alt="A website created using Bootstrap."
-            />
-          </div>
-          <div class="proText">
-            <p>
-              This is a group assignment with 2 other people, it was created
-              with the help of Bootstrap, Sass and Gulp. I created the
-              Contact(Kontakt) page and the about(Om) page.
-            </p>
-            <a
-              href="https://github.com/FannyRosen/ettlitethem.git"
-              target="_blank"
-              >Do you want to know more?</a
-            >
-          </div>
-        </li>
-        <li>
-          <h3>NodeJs To-do list</h3>
-          <div id="pro4">
-            <img
-              src="src/images/NodeJsTodo.png"
-              alt="A Node express to-do list with CRUD"
-            />
-          </div>
-          <div class="proText">
-            <p>
-              This is a to-do list created using NodeJs and with Express and
-              express handlebars.
-            </p>
-            <a href="https://github.com/Rasweb/Nodejs-TODO.git" target="_blank"
-              >Do you want to know more?</a
-            >
-          </div>
-        </li>
-      </ul>
-    </main>
+    <main id="main"></main>
 
     <footer class="tes" id="contact">
       <div>
