Fixed a broken link.

--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
           projects to come.
           <button id="toggleDarkLight">Dark/Light Mode</button>
         </p>
+        <a href="" id="projects"></a>
       </div>
     </header>
     <main id="main"></main>
 
-    <footer class="tes" id="contact">
+    <footer id="contact">
       <div>
         <h1 id="contactText">Contact me</h1>
         <p>You can find me on these websites:</p>
